aout flushing in loop with --master-clock=input, when the audio device has a latency > 200ms

The problem always existed, it is now hidden because, by the default, the audio source is the master.

But this is problematic when playing live streams.

It happens easily on Android (aaudio or AudioTrack) when using a bluetooth device and playing a live stream:

08-02 13:14:21.755  7360 21127 D VLC     : [b4000079dfc9d210/5287] libvlc input: Stream buffering done (1070 ms in 1072 ms)
08-02 13:14:21.755  7360 21127 D VLC     : [b4000079dfc9d210/5287] libvlc input: Decoder wait done in 0 ms
08-02 13:14:21.831  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (201068 us)
08-02 13:14:21.831  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (178999 us)
08-02 13:14:21.831  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (178805 us)
08-02 13:14:21.832  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (178645 us)
08-02 13:14:21.832  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (178533 us)
08-02 13:14:21.832  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (178394 us)
08-02 13:14:21.832  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (178189 us)
08-02 13:14:21.832  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (178054 us)
08-02 13:14:21.832  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177871 us)
08-02 13:14:21.832  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177804 us)
08-02 13:14:21.832  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177739 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177684 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177621 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177562 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177458 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177402 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177320 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177266 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177219 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177144 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (177041 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176969 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176913 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176837 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176791 us)
08-02 13:14:21.833  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176724 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176651 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176590 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176542 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176496 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176450 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176340 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176284 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176237 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176190 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176139 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176094 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176048 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (176003 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (175959 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (175875 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (175826 us)
08-02 13:14:21.834  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (175730 us)
08-02 13:14:21.835  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (175686 us)
08-02 13:14:21.835  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (175611 us)
08-02 13:14:21.835  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (175547 us)
08-02 13:14:21.835  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (175505 us)
08-02 13:14:21.888  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (122680 us)
08-02 13:14:21.888  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (122557 us)
08-02 13:14:21.888  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (122497 us)
08-02 13:14:21.888  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (122435 us)
08-02 13:14:21.888  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (122376 us)
08-02 13:14:21.888  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (122320 us)
08-02 13:14:21.983  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (27617 us)
08-02 13:14:21.983  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (27233 us)
08-02 13:14:21.983  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (26995 us)
08-02 13:14:21.983  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (26797 us)
08-02 13:14:21.984  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (26493 us)
08-02 13:14:21.984  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (26196 us)
08-02 13:14:22.103  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: starting late (-123268 us)
08-02 13:14:22.104  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: starting late (-123421 us)
08-02 13:14:22.104  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: starting late (-123506 us)
08-02 13:14:22.104  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: starting late (-123583 us)
08-02 13:14:22.104  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: starting late (-123657 us)
08-02 13:14:22.104  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: starting late (-123767 us)
08-02 13:14:22.630  7360 21184 W VLC     : [b40000795fd25710/52c0] libvlc audio output: playback way too late (669564): flushing buffers
08-02 13:14:22.655  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (1080543 us)
08-02 13:14:22.655  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (1080102 us)
08-02 13:14:22.655  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (1079806 us)
08-02 13:14:22.655  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (1079522 us)
08-02 13:14:22.655  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (1079193 us)
08-02 13:14:22.655  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (1078885 us)
08-02 13:14:22.745  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (989790 us)
08-02 13:14:22.745  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (989323 us)
08-02 13:14:22.746  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (988942 us)
08-02 13:14:22.746  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (988597 us)
08-02 13:14:22.746  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (988250 us)
08-02 13:14:22.746  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (987903 us)
08-02 13:14:22.779  7360 21637 D VLC     : [b40000797fcf0fd0/5485] libvlc vout display: picture displayed late (missing 22 ms)
08-02 13:14:22.877  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (853192 us)
08-02 13:14:22.878  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (852738 us)
08-02 13:14:22.878  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (852367 us)
08-02 13:14:22.878  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (851970 us)
08-02 13:14:22.878  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (851566 us)
08-02 13:14:22.878  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (851177 us)
08-02 13:14:23.019  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (710160 us)
08-02 13:14:23.019  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (709787 us)
08-02 13:14:23.019  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (709466 us)
08-02 13:14:23.019  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (709148 us)
08-02 13:14:23.019  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (708805 us)
08-02 13:14:23.019  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (708491 us)
08-02 13:14:23.129  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (597916 us)
08-02 13:14:23.130  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (597472 us)
08-02 13:14:23.130  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (597126 us)
08-02 13:14:23.130  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (596734 us)
08-02 13:14:23.130  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (596368 us)
08-02 13:14:23.130  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (596028 us)
08-02 13:14:23.257  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (472101 us)
08-02 13:14:23.257  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (471655 us)
08-02 13:14:23.258  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (471334 us)
08-02 13:14:23.258  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (471021 us)
08-02 13:14:23.258  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (470743 us)
08-02 13:14:23.258  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (470462 us)
08-02 13:14:23.382  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (347935 us)
08-02 13:14:23.382  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (347634 us)
08-02 13:14:23.382  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (347405 us)
08-02 13:14:23.382  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (347178 us)
08-02 13:14:23.382  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (346969 us)
08-02 13:14:23.382  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (346749 us)
08-02 13:14:23.508  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (221726 us)
08-02 13:14:23.508  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (221507 us)
08-02 13:14:23.508  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (221335 us)
08-02 13:14:23.508  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (221138 us)
08-02 13:14:23.508  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (220972 us)
08-02 13:14:23.509  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (220808 us)
08-02 13:14:23.638  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (90541 us)
08-02 13:14:23.638  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (90278 us)
08-02 13:14:23.638  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (90038 us)
08-02 13:14:23.638  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (89827 us)
08-02 13:14:23.638  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (89605 us)
08-02 13:14:23.638  7360 21184 D VLC     : [b40000790fc6c9a0/52c0] libvlc generic: deferring start (89414 us)
08-02 13:14:23.772  7360 21184 W VLC     : [b40000795fd25710/52c0] libvlc audio output: playback way too late (495052): flushing buffers