input: propagate audio drift to the player

In case the audio is not the master and that we can't cope with a too
big audio latency.

All other ESes will be delayed accordingly.

Fixes #28336