src/input/decoder.c
@@ -489,6 +489,13 @@ static bool aout_replaygain_changed( const audio_replay_gain_t *a,
     return false;
 }
 
+static void
+OnNewAudioDrift(vlc_tick_t drift, void *data)
+{
+    vlc_input_decoder_t *p_owner = data;
+    decoder_Notify(p_owner, on_new_audio_drift, drift);
+}
+
 static int ModuleThread_UpdateAudioFormat( decoder_t *p_dec )
 {
     vlc_input_decoder_t *p_owner = dec_get_owner( p_dec );
@@ -552,6 +559,8 @@ static int ModuleThread_UpdateAudioFormat( decoder_t *p_dec )
                 .clock = p_owner->p_clock,
                 .str_id = p_owner->psz_id,
                 .replay_gain = &p_dec->fmt_out.audio_replay_gain,
+                .on_new_drift_cb = OnNewAudioDrift,
+                .cb_data = p_owner,
             };
             p_astream = vlc_aout_stream_New( p_aout, &cfg );
             if( p_astream == NULL )
